tests/stable/function/compile_fail/missing_reason.stderr
error: you need to specify a reason why this precondition holds

  = help: add `, reason = "why does this hold?"`

 --> $DIR/missing_reason.rs:8:27
  |
8 |     #[assert_pre(condition("must be bar"))]
  |                           ^^^^^^^^^^^^^^^
